Fix whitespaces, add almost all tests from set A

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ body {
 #question {
   font-size: 130%;
   padding: 10px;
+  white-space:pre-wrap;
 }
 
 .score {
@@ -39,6 +40,7 @@ body {
 
 .answer {
   display: flex;
+  white-space:pre-wrap;
   padding: 8px;
   align-items: center;
   transition-duration: 0.6s;
